Init example tests

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     Open / close box
   </a>
   
+  <a href="#" id="js-change-title">
+    Change title
+  </a>
+  
   <div id="js-box" class="box" hidden>
     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit
     esse cillum dolore eu fugiat nulla pariatur. Nulla quis diam. Fusce nibh. Itaque earum rerum hic tenetur a sapiente
