--- a/index.html
+++ b/index.html
@@ -4,24 +4,62 @@
   <meta charset="UTF-8">
   <title>Cypress example</title>
   <link rel="stylesheet" type="text/css" href="./assets/style.css">
-  <script async src="./assets/javascript.js" crossorigin="anonymous"></script>
+  <script>
+      window.addEventListener('load', function () {
+          document.getElementById('js-fetch-data').addEventListener('click', function (e) {
+              e.preventDefault();
+
+              fetch('https://jsonplaceholder.typicode.com/comments')
+                  .then(function () {
+                      document.getElementById('js-fetch-alert').style.display = 'block'
+                  })
+                  .catch(function (error) {
+                      console.warn(error);
+                  })
+          })
+
+      })
+
+  </script>
 </head>
 <body>
-
 <div class="container">
-  <a href="#" id="js-box-open">
-    Open / close box
-  </a>
-  
-  <a href="#" id="js-change-title">
-    Change title
-  </a>
-  
-  <div id="js-box" class="box" hidden>
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit
-    esse cillum dolore eu fugiat nulla pariatur. Nulla quis diam. Fusce nibh. Itaque earum rerum hic tenetur a sapiente
-    delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
-  </div>
+
+  <h1>Details</h1>
+  <details>
+    <summary data-cy="details-trigger">Detail example</summary>
+    <div data-cy="details-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Itaque earum rerum hic
+      tenetur a
+      sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores
+      repellat.
+    </div>
+  </details>
+  <hr>
+
+  <h2>Form</h2>
+  <form method="get" data-cy="form">
+    <table>
+      <tr>
+        <td>Name</td>
+        <td><input type="text" name="name" required data-cy="form-name"></td>
+      </tr>
+      <tr>
+        <td>Surname</td>
+        <td><input type="text" name="surname" required data-cy="form-surname"></td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td><input type="submit" value="Submit"></td>
+      </tr>
+    </table>
+  </form>
+
+  <hr>
+
+  <h2>Ajax</h2>
+  <a href="#" id="js-fetch-data" data-cy="ajax-fetch-data">Click me</a>
+  <div id="js-fetch-alert" data-cy="ajax-fetch-alert" style="display: none;" class="alert">Ajax call: ok</div>
 </div>
 </body>
 </html>
