--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <hr>
 
   <h2>Ajax</h2>
-  <a href="#" id="js-fetch-data-button" data-cy="ajax-fetch-data-butto">Click me</a>
+  <a href="#" id="js-fetch-data-button" data-cy="ajax-fetch-data">Click me</a>
   <div id="js-fetch-alert" data-cy="ajax-fetch-alert" style="display: none;" class="alert">Ajax call: ok</div>
   <div id="comment-list"></div>
 </div>
