--- a/index.html
+++ b/index.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Cypress example</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+	<meta charset="UTF-8">
+	<title>Cypress example</title>
+	<style>
+		* {
+			box-sizing: border-box;
+		}
 
-    body {
-      padding: 0;
-      margin: 0;
-      font-family: Arial, 'sans-serif';
-      font-size: 15px;
-    }
+		body {
+			padding: 0;
+			margin: 0;
+			font-family: Arial, 'sans-serif';
+			font-size: 15px;
+		}
 
-    a {
-      display: block;
-      padding: 10px 0;
-      color: black;
-    }
+		a {
+			display: block;
+			padding: 10px 0;
+			color: black;
+		}
 
-    h1, h2 {
-      padding: 0;
-      margin: 0 0 20px 0;
-      font-size: 22px;
-    }
+		h1, h2 {
+			padding: 0;
+			margin: 0 0 20px 0;
+			font-size: 22px;
+		}
 
-    hr {
-      border: 0;
-      border-bottom: 1px dashed #DDD;
-    }
+		hr {
+			border: 0;
+			border-bottom: 1px dashed #DDD;
+		}
 
-    .container {
-      width: 980px;
-      margin: 30px auto 0 auto;
-    }
+		.container {
+			width: 980px;
+			margin: 30px auto 0 auto;
+		}
 
-    .alert {
-      background: green;
-      color: white;
-      padding: 10px;
-      margin: 10px 0 0 0;
-    }
-  </style>
-  <script>
+		.alert {
+			background: green;
+			color: white;
+			padding: 10px;
+			margin: 10px 0 0 0;
+		}
+	</style>
+	<script>
       window.addEventListener('load', function () {
           document.getElementById('js-fetch-data').addEventListener('click', function (e) {
               e.preventDefault();
 
-              fetch('https://jsonplaceholder.typicode.com/comments')
+              fetch('example.json')
                   .then(function () {
                       document.getElementById('js-fetch-alert').style.display = 'block'
                   })
@@ -57,49 +57,47 @@
                       console.warn(error);
                   })
           })
-
       })
-
-  </script>
+	</script>
 </head>
 <body>
 <div class="container">
 
-  <h1>Details</h1>
-  <details>
-    <summary data-cy="details-trigger">Detail example</summary>
-    <div data-cy="details-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Itaque earum rerum hic
-      tenetur a
-      sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores
-      repellat.
-    </div>
-  </details>
-  <hr>
+	<h1>Details</h1>
+	<details>
+		<summary data-cy="details-trigger">Detail example</summary>
+		<div data-cy="details-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Itaque earum rerum hic
+			tenetur a
+			sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores
+			repellat.
+		</div>
+	</details>
+	<hr>
 
-  <h2>Form</h2>
-  <form method="get" data-cy="form">
-    <table>
-      <tr>
-        <td>Name</td>
-        <td><input type="text" name="name" required data-cy="form-name"></td>
-      </tr>
-      <tr>
-        <td>Surname</td>
-        <td><input type="text" name="surname" required data-cy="form-surname"></td>
-      </tr>
+	<h2>Form</h2>
+	<form method="get" data-cy="form">
+		<table>
+			<tr>
+				<td>Name</td>
+				<td><input type="text" name="name" required data-cy="form-name"></td>
+			</tr>
+			<tr>
+				<td>Surname</td>
+				<td><input type="text" name="surname" required data-cy="form-surname"></td>
+			</tr>
 
-      <tr>
-        <td></td>
-        <td><input type="submit" value="Submit"></td>
-      </tr>
-    </table>
-  </form>
+			<tr>
+				<td></td>
+				<td><input type="submit" value="Submit"></td>
+			</tr>
+		</table>
+	</form>
 
-  <hr>
+	<hr>
 
-  <h2>Ajax</h2>
-  <a href="#" id="js-fetch-data" data-cy="ajax-fetch-data">Click me</a>
-  <div id="js-fetch-alert" data-cy="ajax-fetch-alert" style="display: none;" class="alert">Ajax call: ok</div>
+	<h2>Ajax</h2>
+	<a href="#" id="js-fetch-data" data-cy="ajax-fetch-data">Click me</a>
+	<div id="js-fetch-alert" data-cy="ajax-fetch-alert" style="display: none;" class="alert">Ajax call: ok</div>
 </div>
 </body>
 </html>
